# rust_workspace

./: model.rs!
01-section/: Cargo.toml
01-section/compound-types/: Cargo.toml
01-section/compound-types/src/: main.rs
01-section/control_flow/src/: main.rs
01-section/functions/src/: main.rs
01-section/scalar-data-types/: Cargo.toml
01-section/scalar-data-types/src/: main.rs
01-section/strings/src/: main.rs
01-section/variables/src/: main.rs
01-section/vectors/src/: main.rs
02-section/: Cargo.toml
02-section/ownership/src/: main.rs
03-structs-and-lifetime/: Cargo.toml
03-structs-and-lifetime/method/src/: main.rs
03-structs-and-lifetime/structs/src/: main.rs
axum_helloworld/: .Cargo.toml.swp  Cargo.toml
axum_helloworld/src/: main.rs
catdex-api/: Cargo.toml
catdex-api/migrations/2025-07-31-194944_create_cats/: down.sql  up.sql
catdex-api/src/: .main.rs.swp  main.rs  model.rs
catdex-api/static/: .index.html.swp  index.html
catdex-api/static/css/: .index.css.swp  index.css
catsay/: .Cargo.toml.swp  Cargo.toml  output.txt
catsay-gui/: Cargo.toml
catsay-gui-glade/: Cargo.toml
catsay-gui-glade/src/: layout.glade  layout.glade~  main.rs
catsay-gui/src/: main.rs
catsay-tui/: Cargo.toml
catsay-tui/src/: main.rs
catsay/src/: .main.rs.swm  .main.rs.swn  .main.rs.swo  .main.rs.swp  main.rs
catsay/tests/: integration_test.rs
guessing_game/src/: main.rs
hello/: 404.html  index.html
hello/src/: main.rs
